<resources>
    <!--******** Application ********-->
    <string name="app_name">Water Testing Suite</string>

    <!--******** Test Suite Common ********-->

    <!-- Splash Activity -->
    <string name="title_splash">Sensor Device Scan</string>
    <string name="btn_launchWQM">Water Quality Monitor\n\nTemperature, pH level, and free Cl measurements</string>
    <string name="lbl_launch">Select Application to Run:</string>
    <string name="btn_launchPStat">Potentiostat Electroanalysis\n\nLinear Sweep Voltammetry (LSV), Cyclic Voltammetry (CV), Square Wave Voltammetry (SWV), and Differential Pulse Voltammetry (DPV)</string>

    <!-- Device Scan Activity -->
    <string name="title_devices">Sensor Device Scan</string>
    <string name="ble_not_supported">Error: BLE is not supported on this device</string>
    <string name="label_device_address">Device address:</string>

    <string name="btn_demo">Connect</string>

    <string name="error_bluetooth_not_supported">Error: Bluetooth not supported on this device</string>
    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>

    <!--******** Potentiostat ********-->

    <string name="title_activity_experiment">Potentiostat</string>
    <string name="title_pot_results">Results</string>
    <string name="title_edit_exp">Edit Experiment</string>
    <string name="title_new_exp">Create New Experiment</string>
    <string name="lbl_exp_select">Select Experiment:</string>
    <string name="btn_edit_selected">Edit Selected Experiment</string>
    <string name="btn_run_selected">Run Selected Experiment</string>
    <string name="btn_create_new">Create New Experiment</string>
    <string name="lbl_pot_current">Current (A)</string>
    <string name="lbl_pot_voltage">Voltage (mV)</string>
    <string name="void_selection">&lt;none selected&gt;</string>

    <!--******** Water Quality Monitor ********-->

    <string name="menu_start_rec">Start Recording</string>
    <string name="menu_stop_rec">Stop Recording</string>
    <string name="menu_clear">Clear Data</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_export_local">Export to Device (Local)</string>
    <string name="menu_export_cloud">Export to Drive (Cloud)</string>
    <string name="menu_change_view_meas">Measurement View</string>
    <string name="menu_change_view_cal_pH">Calibration View (pH)</string>
    <string name="menu_change_view_cal_T">Calibration View (Temp.)</string>

    <string name="blank"> </string>


    <string name="title_wqm">Water Quality Monitor</string>
    <string name="disconnected">Disconnected</string>
    <string name="connected_measuring">Connected: Recording</string>
    <string name="connected_stopped">Connected: Stopped</string>
    <string name="connected_demo">Connected: WQM Board</string>
    <string name="lbl_Samples">Samples Collected:</string>

    <string name="lbl_temp">Temp. (&#176;C)</string>
    <string name="lbl_ph">pH Level</string>
    <string name="lbl_chlorine">Free Cl (ppm)</string>
    <string name="lbl_alk">Alkalinity (ppm)</string>
    <string name="lbl_current">Current:</string>
    <string name="lbl_average">Average:</string>
    <string name="no_val">-</string>
    <string name="cl_not_valid">waiting for\nmeasurements</string>
    <string name="alk_not_valid">waiting for\nmeasurements</string>

    <string name="lbl_tempRaw">Temp.(mV)</string>
    <string name="lbl_phRaw">pH (mV)</string>
    <string name="lbl_chlorineRaw">Free Cl (nA)</string>
    <string name="lbl_alkalinityRaw">Alkalinity (nA)</string>
    <string name="lbl_rawVal">Raw Values:</string>

    <string name="lbl_mV">mV</string>
    <string name="lbl_calV">Cal. Voltage (mV)</string>


    <string name="lbl_averageph">Average pH (mV)</string>
    <string name="lbl_averageph_Adv">Avg. pH</string>

    <string name="lbl_avgTempRaw">Average T<sub><small>raw</small></sub> (mV)</string>
    <string name="lbl_avgTempRaw_Adv">Avg T<sub><small>raw</small></sub></string>

    <string name="lbl_pHStats">pH Statistics:</string>
    <string name="lbl_rawTStats">Raw T Statistics:</string>

    <string name="lbl_pkpk">pk-pk(mV)</string>
    <string name="lbl_slope">slope<sub><small>LR</small></sub>(mV)</string>
    <string name="lbl_r2">R<small><sup>2</sup><sub>LR</sub></small></string>
    <string name="lbl_stdDev">Std. Dev.</string>
    <string name="lbl_score">Score %</string>
    <string name="lbl_scoreLarge">Voltage Steady Score %</string>

    <string name="btn_start">Start Read</string>

    <string name="btn_cal_pH4">Calibrate pH4</string>
    <string name="btn_cal_pH7">Calibrate pH7</string>
    <string name="btn_cal_pH10">Calibrate pH10</string>

    <string name="btn_cal_Tlow">Calibrate Low Temp. (0&#176;C)</string>
    <string name="btn_cal_Thigh">Calibrate High Temp. (100&#176;C)</string>

    <string name="lbl_AvgSize">Average Size:</string>
    <string name="lbl_SampSize">Sample Size:</string>
    <string name="lbl_Ecal">pH7 Ecal (mV):</string>

    <string name="pref_samples_title">Sampling</string>
    <string name="pref_calibration_title">Calibration</string>
    <string name="pref_display_title">Display</string>

    <string name="pref_samples_desc">Enter the maximum number of samples to store in memory. Valid range: 5 \u2264 N<sub>S,tot</sub> \u2264 10000</string>
    <string name="pref_avg_samples_desc">Enter the total number of samples used to calculate average. Valid range: 5 \u2264 N<sub>S,ave</sub> \u2264 500,  &amp; N<sub>S,ave</sub> \u2264 N<sub>S,tot</sub>  </string>

    <string name="file_created">File created: %s</string>
    <string name="file_create_error">Error: unable to create file</string>

    <string-array name="array_name">
        <item>Cyclic Voltammetry (CV)</item>
    </string-array>
</resources>
