<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.mcmaster.waterqualitymonitorsuite.MeasurementActivity">

    <Button
        android:id="@+id/btnRunExperiment"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginTop="31dp"
        android:text="@string/btn_run_selected"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerExperiment"
        tools:layout_editor_absoluteX="8dp" />

    <Button
        android:id="@+id/btnCreateNewExperiment"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginTop="46dp"
        android:text="@string/btn_create_new"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRunExperiment" />

    <Button
        android:id="@+id/btnEditSelectedExp"
        android:layout_width="368dp"
        android:layout_height="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_edit_selected"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCreateNewExperiment" />

    <Spinner
        android:id="@+id/spinnerExperiment"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/lblExpSelect"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp" />

    <TextView
        android:id="@+id/lblExpSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/lbl_exp_select"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="99dp" />

</android.support.constraint.ConstraintLayout>
