<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:scaleType="centerCrop"
        app:srcCompat="@drawable/water_drop" />

    <TextView
        android:id="@+id/tvLaunch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/lbl_launch"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textColor="@color/colorPrimary"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btnLaunchWQM"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="80dp"
        android:elevation="3dp"
        android:text="@string/btn_launchWQM"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLaunchPStat"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="200dp"
        android:elevation="3dp"
        android:text="@string/btn_launchPStat"
        android:textAllCaps="false"
        android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Borderless.Colored"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:visibility="gone" />


</FrameLayout>